fix - Keep on operating on finding link jumps

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -59,10 +59,8 @@ li {
   list-style: none;
 }
 
-input:focus,
 button:focus,
-a:focus,
-textarea:focus {
+a:focus {
   outline: none;
 }
 
@@ -71,13 +69,10 @@ button {
   cursor: pointer;
 }
 
-textarea {
-  resize: none;
-}
-
-html {
+/* html {
   font-size: 62.5%;
-}
+  height: 100%;
+} */
 
 body {
   min-width: 320px;
@@ -85,7 +80,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.2;
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
   background-color: var(--page-bg);
 }
 
@@ -114,9 +109,15 @@ img {
   margin: 0 auto;
 }
 
-::-webkit-scrollbar {
-  display: none;
+.layout-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
+
+/* ::-webkit-scrollbar {
+  display: none;
+} */
 
 @media only screen and (max-width: 98.25em) {
   html {
